--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Run Endtest functional tests
         uses: endtest-technologies/github-run-tests-action@v1.2
         with:
-          app-id: '85205402'
-          app-code: '79973826'
-          api-request: 'pzd'
+          app-id: 85205402
+          app-code: 79973826
+          api-request: https://endtest.io/api.php?action=runTestSuite&appId=85205402&appCode=79973826&testSuite=106877&selectedPlatform=windows&selectedOs=a&selectedBrowser=chrome&selectedResolution=d&selectedLocation=sanfrancisco&selectedCases=491130&writtenAdditionalNotes=
           number-of-loops: 6
 
       # Runs a set of commands using the runners shell
