--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,12 @@ jobs:
         run: echo Hello, world!
         
       - name: Run Endtest functional tests
-        uses: endtest-technologies/github-run-tests-action@v1.2.4
+        uses: endtest-technologies/github-run-tests-action@v1.2.5
         with:
-          app-id: "85205402"
-          app-code: "79973826"
-          api-request: "https://endtest.io/api.php?action=runTestSuite&appId=85205402&appCode=79973826&testSuite=106877&selectedPlatform=windows&selectedOs=a&selectedBrowser=chrome&selectedResolution=d&selectedLocation=sanfrancisco&selectedCases=491130&writtenAdditionalNotes="
-          number-of-loops: 6
+          app_id: "85205402"
+          app_code: "79973826"
+          api_request: "https://endtest.io/api.php?action=runTestSuite&appId=85205402&appCode=79973826&testSuite=106877&selectedPlatform=windows&selectedOs=a&selectedBrowser=chrome&selectedResolution=d&selectedLocation=sanfrancisco&selectedCases=491130&writtenAdditionalNotes="
+          number_of_loops: 6
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
