--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           number_of_loops: 6
           
       - name: Check the output from My action
-        run: echo ${{ steps.run_endtest_functional_tests.outputs.passed }}
+        run: echo ${{ steps.run_endtest_functional_tests.outputs.test_suite_name }}
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
