--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,36 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      # test 123
-      # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
         
       - name: Run Endtest functional tests
         id: endtest_functional_tests
-        uses: endtest-technologies/github-run-tests-action@v1.3.0.0.2
+        uses: endtest-technologies/github-run-tests-action@v1.3.0.0.3
         with:
           app_id: "85205402"
           app_code: "79973826"
           api_request: "https://endtest.io/api.php?action=runTestSuite&appId=85205402&appCode=79973826&testSuite=106877&selectedPlatform=windows&selectedOs=a&selectedBrowser=chrome&selectedResolution=d&selectedLocation=sanfrancisco&selectedCases=491130&writtenAdditionalNotes="
           number_of_loops: 6
           
-      - name: Just echo anything
-        run: echo "hello"
+      - name: Get the test suite name output
+        run: echo "${{ steps.endtest_functional_tests.outputs.test_suite_name }}"
         
-      - name: Set selected color
-        run: echo '::set-output name=SELECTED_SAMPLE::green'
-        id: random-color-generator
-        
-      - name: Get color
-        run: echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_SAMPLE }}"
-    
-        
-      - name: Check the test suite name output
-        run: echo "${{ steps.endtest_functional_tests.outputs.test_suite_name }} attack"
-      - name: Check the configuration output
-        run: echo "${{ steps.endtest_functional_tests.outputs.configuration }} attack"
+      - name: Get the configuration output
+        run: echo "${{ steps.endtest_functional_tests.outputs.configuration }}"
 
-        
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      
+      - name: Get multiple outputs
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "${{ steps.endtest_functional_tests.outputs.test_suite_name }}"
+          echo "${{ steps.endtest_functional_tests.outputs.configuration }}"
