--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         
       - name: Run Endtest functional tests
         id: endtest_functional_tests
-        uses: endtest-technologies/github-run-tests-action@v1.3.0.0.4
+        uses: endtest-technologies/github-run-tests-action@v1.3.0.0.5
         with:
           app_id: "85205402"
           app_code: "79973826"
@@ -25,6 +25,12 @@ jobs:
           
       - name: Get the test suite name output
         run: echo "${{ steps.endtest_functional_tests.outputs.test_suite_name }}"
+        
+      - name: Get the test suite name output1
+        run: echo ${{ steps.endtest_functional_tests.outputs.test_suite_name }}
+        
+      - name: Get the test suite name output2
+        run: echo ${{ echo steps.endtest_functional_tests.outputs.test_suite_name }}
         
       - name: Get the configuration output
         run: echo "${{ steps.endtest_functional_tests.outputs.configuration }}"
